# data-lifeboat

./: README.md
benchmarks/: s3-vs-ipfs-vs-storacha.md
proposals/: cid-alongside-doi.md
recipes/: pin-zarr-to-storacha.md
tools/coded-pin/: README.md  pyproject.toml
tools/coded-pin/coded_pin/: __init__.py  cli.py  ipns.py  native.py  pin.py  virtual.py
tools/coded-pin/coded_pin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/coded-pin/tests/: test_coded_pin.py
